--- a/ShoppingCartWeb/Views/User/IndexUser.cshtml
+++ b/ShoppingCartWeb/Views/User/IndexUser.cshtml
@@ -15,7 +15,7 @@
             }
         </style>
 
-        <h1 class="text-dark">Registered Users</h1>
+        <h1 class="text-dark"> User Logins</h1>
     </div>
     <div class="col-2 d-flex justify-content-end align-items-start">
         <a asp-controller="User" asp-action="Register" class="btn btn-primary btn-sm ms-2">
